--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -140,6 +140,8 @@
                                 <a class="dropdown-item" href="/users/cart">CARTS</a>
                                 <a class="dropdown-item" href="/users/orders">My Orders</a>
                                 <a class="dropdown-item" href="/users/changepassword">Change Password</a>
+                                <a class="dropdown-item" href="/users/wishlist">Wishlists</a>
+
 
 
                                 <a class="dropdown-item" href="/users/logout">LOGOUT</a>
