--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -97,9 +97,9 @@
                         {{!-- <a class="collapse-item" href="forgot-password.html">Payment</a> --}}
 
                         <div class="collapse-divider"></div>
-                        {{!-- <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a> --}}
+                        <h6 class="collapse-header">COUPONS:</h6>
+                        <a class="collapse-item" href="/admin/coupon">All Coupons</a>
+                        <a class="collapse-item" href="/admin/addcoupon">Add Coupons</a>
                     </div>
                 </div>
             </li>
