--- a/views/admin/addcoupon.hbs
+++ b/views/admin/addcoupon.hbs
@@ -52,12 +52,12 @@
                                             <div class="mb-3 col-md-6">
                                                 <label class="form-label">Coupen Code :</label>
                                                 <input class="form-control" type="text" name="code"
-                                                    placeholder="NEWYEAR2024" required />
+                                                    placeholder="*****" required />
                                             </div>
                                             <div class="mb-3 col-md-6">
                                                 <label class="form-label">Discount (%):</label>
                                                 <input class="form-control" type="number" id="discount" name="discount"
-                                                    min="0" placeholder="10 %" required />
+                                                    min="0" placeholder="%" required />
                                             </div>
                                             <div class="mb-3 col-md-6">
                                                 <label for="lastName" class="form-label">Valid From:</label>
