--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -37,62 +37,67 @@
 
             <table class="table">
                 <thead>
-                        <tr>
-                            <th>Coupen Code</th>
-                            <th>Discount (%)</th>
-                            <th>Valid From</th>
-                            <th>Valid Until</th>
-                            <th>Min Price</th>
-                            <th>Max Price</th>
-                            <th>isActive</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody class="table-border-bottom-0">
-                        {{#each allcoupon}}
-                        <tr>
-                            <td>
-                                <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                    <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top"
-                                        class="avatar avatar-xs pull-up" title="{{this.code}}">{{this.code}}
-                                    </li>
+                    <tr>
+                        <th>Coupen Code</th>
+                        <th>Discount (%)</th>
+                        <th>Valid From</th>
+                        <th>Valid Until</th>
+                        <th>Min Price</th>
+                        <th>Max Price</th>
+                        <th>isActive</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody class="table-border-bottom-0">
+                    {{#each allcoupon}}
+                    <tr>
+                        <td>
+                            <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
+                                <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top"
+                                    class="avatar avatar-xs pull-up" title="{{this.code}}">{{this.code}}
+                                </li>
 
-                                </ul>
+                            </ul>
 
-                            </td>
-                            <td>
-                                <span class="fw-medium">{{this.discount}}</span>
-                            </td>
-                            <td>{{formatDate this.validFrom}}</td>
+                        </td>
+                        <td>
+                            <span class="fw-medium">{{this.discount}}</span>
+                        </td>
+                        <td>{{formatDate this.validFrom}}</td>
 
-                            <td><span class="badge bg-label-danger me-1">{{formatDate this.validUntil}}</span></td>
+                        <td><span class="badge bg-label-danger me-1">{{formatDate this.validUntil}}</span></td>
 
-                            <td>{{this.minPriceRange}}</span></td>
-                            <td>{{this.maxPriceRange}}</span></td>
-                            <td>{{this.isActive}}</span></td>
-                            <td>
-                                <div class="dropdown">
-                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow"
-                                        data-bs-toggle="dropdown">
-                                        <i class="bx bx-dots-vertical-rounded"></i>
-                                    </button>
-                                    <div class="dropdown-menu">
+                        <td>{{this.minPriceRange}}</span></td>
+                        <td>{{this.maxPriceRange}}</span></td>
+                        <td>{{this.isActive}}</span></td>
+                        <td>
+                            <div class="dropdown">
+                                <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Active
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    
+                                    {{#if isActive}}
+                                    <a class="dropdown-item" href="/admin/coupon-block/{{this._id}} ">
+                                        Block
+                                    </a>
+                                    {{else}}
+                                    <a class="dropdown-item" href="/admin/coupon-active/{{this._id}} "
+                                        onclick="return confirm('Are you Sure Block {{this.code}} ?')">
+                                        Active
+                                    </a>
+                                    {{/if}}
 
-                                        {{#if isActive}}
-                                        <a class="dropdown-item" href="/admin/coupen-block/{{this._id}} " />
-                                        <i class="bx bx-check-square me-1"></i> Block</a>
-                                        {{else}}
-                                        <a class="dropdown-item" href="/admin/coupen-active/{{this._id}} "
-                                            onclick="return confirm('Are you Sure Active {{this.code}} ?')">
-                                            <i class="bx bx-block me-1"></i> Active</a>
-                                        {{/if}}
-                                    </div>
+
                                 </div>
-                            </td>
-                        </tr>
-                        {{/each}}
+                            </div>
+                           
+                        </td>
+                    </tr>
+                    {{/each}}
 
-                    </tbody>
+                </tbody>
             </table>
 
 
